--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: Arial, sans-serif;
         }
         h1 {
-            color: #d2691e;
+            color: red;
         }
         img {
             max-width: 300px;
@@ -31,4 +31,3 @@
     <img src='/uploads/2023/02/donut.png' alt='Пончик'>
 </body>
 </html>
-
