--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: Arial, sans-serif;
         }
         h1 {
-            color: red;
+            color: #d2691e;
         }
         img {
             max-width: 300px;
